se termina proyecto

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,6 +10,38 @@
   <body>
     <%- include("partials/navigation.ejs"); %>
 
+    <div class="container">
+      <header class="row">
+        <div class="col-lg-12 text-center">
+          <img
+            src="/images/pews-logo.png"
+            class="w-auto animate__animated animate__pulse"
+            alt="Website Logo"
+          />
+        </div>
+      </header>
+    </div>
+
+    <!-- section one -->
+    <div class="container-fluid" id="about">
+      <div class="row bg-dark text-white p-5 text-center">
+        <div class="col-sm-6">
+          <i class="fas fa-broadcast-tower fa-10x"></i>
+        </div>
+        <div class="col-sm-6">
+          <h3>Your better option for network design</h3>
+          <p>
+            <span
+              >Elit exercitationem id illo sit distinctio. Deserunt ut debitis
+              voluptates mollitia dignissimos eligendi vel quidem itaque dolores
+              ratione ut. Soluta accusantium dolor nemo suscipit rerum. Aliquid
+              quasi excepturi provident eos.</span
+            >
+          </p>
+        </div>
+      </div>
+    </div>
+    <%- include("partials/footer.ejs"); %>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
