--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -5,23 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title%></title>
-    <!--BOOTSTRAP-->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
-      crossorigin="anonymous"
-    />
-    <!-- Font Awasome -->
-    <script
-      src="https://kit.fontawesome.com/54741874cd.js"
-      crossorigin="anonymous"
-    ></script>
+    <%- include("partials/estilos.ejs"); %>
   </head>
   <body>
     <%- include("partials/navigation.ejs"); %>
 
-    <h3>esto es la pagina de contacto</h3>
+    <div class="container p-5">
+      <div class="row">
+        <div class="col-sm-4 offset-md-4">
+          <div class="card animate__animated animate__flipInY">
+            <div class="card-header bg-dark text-white text-center">
+              <h3>Contact Me</h3>
+            </div>
+            <div class="card-body">
+              <form action="">
+                <div class="form-group">
+                  <input class="form-control" type="text" placeholder="Email">
+                </div>
+                <div class="form-group">
+                  <textarea class="form-control" name="" cols="30" rows="10" placeholder="Message"></textarea>
+                </div>
+                <div class="form-group">
+                  <button class="btn btn-primary btn-block">
+                    Save
+                  </button>
+                </div>
+              </form>    
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <%- include("partials/footer.ejs"); %>
   </body>
   <!-- JS Bootstrap -->
   <script
