--- a/src/views/partials/estilos.ejs
+++ b/src/views/partials/estilos.ejs
@@ -2,11 +2,21 @@
 
 <link rel="stylesheet" type="text/css" href="/css/main.css" />
 
+<!--Animated CSS-->
+
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+
 <!--Google Fonts-->
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+  rel="stylesheet"
+/>
 
 <!--BOOTSTRAP-->
 <link
