--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -12,7 +12,7 @@
           <a class="nav-link" href="/contact"><i class="fas fa-envelope"></i> Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about"> <i class="fas fa-building"></i> About</a>
+          <a class="nav-link" href="/#about"> <i class="fas fa-building"></i> About</a>
         </li>
       </ul>
     </div>
