--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -18,12 +18,13 @@
               <h3>Contact Me</h3>
             </div>
             <div class="card-body">
-              <form action="">
+              <form action="/contact" method="POST">
                 <div class="form-group">
-                  <input class="form-control" type="text" placeholder="Email">
+                  <input type="text" hidden name="prueba" value="valor de prueba">
+                  <input class="form-control" type="text" placeholder="Email" name="correo">
                 </div>
                 <div class="form-group">
-                  <textarea class="form-control" name="" cols="30" rows="10" placeholder="Message"></textarea>
+                  <textarea class="form-control" name="mensaje" cols="30" rows="10" placeholder="Message"></textarea>
                 </div>
                 <div class="form-group">
                   <button class="btn btn-primary btn-block">
