--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -11,6 +11,7 @@ body {
     #5691c8,
     #457fca
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-color: #b398ae;
 }
 
 .navbar-brand {
