--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,3 +1,3 @@
-<footer class="bg-light text-center p-2">
+<footer class="bg-light text-center p-2 pie">
     <p class="h3">Pews 2021 &copy;</p>
 </footer>
